<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/norm_white">

    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/rules_for_each_types_of_game"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/txt_classic"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/txt_rules_classic"
                android:textColor="#4E4E4E"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/txt_fast"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/txt_rules_fast"
                android:textColor="#4E4E4E"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/txt_hard"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/txt_rules_hard"
                android:textColor="#4E4E4E"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/txt_danger"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:text="@string/txt_rules_danger"
                android:textColor="#4E4E4E"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>