<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/norm_white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_end"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/maintxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_smb_looser"
        android:gravity="center_horizontal"
        android:textSize="26sp"
        android:textColor="@color/red"
        android:layout_marginVertical="20dp"
        />

    <TextView
        android:id="@+id/bigtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motivathion_for_looser"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginHorizontal="25dp"
        />

    <Button
        android:id="@+id/from_dg_looser_to_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_menu"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/my_yellow"
        android:textColor="#232323"
        android:textSize="15sp"
        android:textStyle="bold"
        />

</LinearLayout>