<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EDE8D5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mini_rules_on_dg_for_danger"
        android:textSize="25sp"
        android:layout_marginHorizontal="10dp"
        android:textColor="#232323"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/et_word_bomb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word_bomb"
        android:textColorHint="#000"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/warning_dg_danger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_ready_on_danger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_wrote"
        android:textColor="#232323"
        android:textSize="25sp"
        android:textStyle="bold"
        android:backgroundTint="@color/my_yellow"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        />

</LinearLayout>