<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/norm_white"
    >

    <TextView
        android:layout_toStartOf="@+id/timer"
        android:id="@+id/TW_spisok_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/players"
        android:textColor="@color/black" />

    <TextView
        android:layout_toStartOf="@+id/timer"
        android:textColor="@color/black"
        android:id="@+id/TW_typeGame"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@+id/TW_spisok_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="1:45"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/all_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TW_typeGame"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_horizontal"
        android:paddingVertical="15dp"
        android:text="@string/all_words"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/all_words"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/spisok_slov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_words"
            android:textColor="@color/norm_black" />

    </ScrollView>

    <TextView
        android:id="@+id/Player_smb_you_hod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:gravity="center_horizontal"
        android:text="@string/player_smb_your_hod"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/slovo_na_bukvu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Player_smb_you_hod"
        android:gravity="center_horizontal"
        android:text="@string/write_word_started_on_A"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/new_word_from_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slovo_na_bukvu"
        android:hint="@string/write_word"
        android:textColor="@color/norm_black"
        android:textColorHint="@color/norm_black"
        android:autofillHints=""
        android:inputType="none" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_word_from_player"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!--<LinearLayout
        android:layout_below="@id/warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Б"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="В"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Г"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Д"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Е"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ё"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ж"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="З"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="И"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Й"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="К"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Л"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="М"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Н"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="О"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="П"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Р"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="С"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Т"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="У"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ф"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Х"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ц"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ч"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ш"
                android:layout_weight="1"
                />
            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Щ"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ъ"
                android:layout_weight="1"
                />
             <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ы"
                android:layout_weight="1"
                />
             <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ь"
                android:layout_weight="1"
                />
             <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Э"
                android:layout_weight="1"
                />
             <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ю"
                android:layout_weight="1"
                />
             <Button
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Я"
                android:layout_weight="1"
                />

        </LinearLayout>

    </LinearLayout>-->

    <Button
        android:id="@+id/hod_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exit"
        android:backgroundTint="@color/my_yellow"
        android:paddingVertical="20dp"
        android:text="@string/hod_is_ready"
        android:textColor="#232323"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/my_yellow"
        android:text="@string/end_game"
        android:textColor="#232323"
        android:textStyle="bold" />

</RelativeLayout>